# game-of-life

./: .gitignore  CREDITS  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: main.yml
game/: file_manager.py  file_support.py  game_of_life.py  play.py
menus/: main.py  settings.py
utils/: constants.py  preload.py  utils.py
